--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "grunt": "^1.0.1"
   },
   "devDependencies": {
-    "grunt-contrib-concat": "^1.0.1"
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-serve": "^0.1.6"
   }
 }
